# mrrc-hdr-qa

./: .buildinfo  .codespellrc  .gitattributes  .gitignore  .pre-commit-config.yaml  00_build_db.bash  00_build_mrrc_db.bash  00_mrqa_db.bash  01_txt_to_sqlite.bash  01_txt_to_sqlite.py  01b_xlsx2db.py  01b_xsl2db.R  02_update_db.py  02_update_db.sh  Dockerfile  Makefile  acq2sqlite.py  attempt.py  build_db.bash  change_header.py  changes.md  check_template.py  compliance_check_html.py  copyDicom.sh  db.txt  dcm2nii_check.bash  dcmmeta2tsv.bash  dcmmeta2tsv.py  email.py  example.py  example_jsons.tsv  find_templates.sql  generated_report.html  genindex.html  header_change.py  index.html  make_template_by_count.sql  mrqart.py  mrrc.bash  mrrc_dbupdate.py  (+20 more)
.doctrees/: environment.pickle  index.doctree
.reviews/: .dir-locals.el  index.org
_autosummary/: acq2sqlite.html  change_header.html  compliance_check_html.html  dcmmeta2tsv.html  mrqart.acq2sqlite.html  mrqart.change_header.html  mrqart.compliance_check_html.html  mrqart.dcmmeta2tsv.html  mrqart.email_latest_flip.html  mrqart.html  mrqart.html_email.html  mrqart.mrqart.html  mrqart.npac_email.html  mrqart.seq_report.html  mrqart.template_checker.html  mrqart.test_db.html  mrqart.web_report.html  mrqart.xnat_lookup.html  mrrc_dbupdate.html  template_checker.html
config/: reporting.toml
dicoms/: MR.1.3.12.2.1107.5.2.43.167046.202208231445351851262117  MR.1.3.12.2.1107.5.2.43.167046.202208231445352497560002  MR.1.3.12.2.1107.5.2.43.167046.202208231445352497562130  (+10 more)
example_dicoms/: B1Map_newline.dcm  badcsa.dcm  (+2 more)
(+139 files in other folders)
