[project]
name = "mrqart"
version = "0.1.0"
description = "MR QA tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydicom>=2.3",
  "nibabel>=5.0",
  "dicom-parser",
  "Jinja2>=3.1",
  "pyrage",
  "websockets",
  "aionotify",
  "tornado",
]

[project.scripts]
mrqart = "mrqart:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mrqart"]

[tool.hatch.build]
include = ["mrqart/**", "README.md"]

